--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Apra's Blog
-subtitle: My CTF and security writeups
+title: xotic's Blog
+subtitle: CTFs y ciberseguridad
 ---
